overflow name fixed, increased anim durat

--- a/src/index.css
+++ b/src/index.css
@@ -49,8 +49,16 @@ h1 {
   justify-content: center;
   width: 100%;
   margin: 0 auto;
-  padding: 0 10px;
+  padding: 0 30px;
   box-sizing: border-box;
+  overflow: visible;
+}
+
+.title {
+  margin: 0; 
+  padding: 20px; 
+  box-sizing: border-box;
+  overflow: visible;
 }
 
 .special-box div {
